# tech_support

./: README.md  Untitled Diagram.drawio  docker-compose-local.yml  pyproject.toml  requirements.txt  yoyo.ini
app/: orders.py
app/amqp_utils/: consumer.py  sender.py
orders_db/migrations/: 20210111_01_B5uPE-create-table-for-orders.py  20210114_01_V7GC6-add-column-for-created-date.py
support/: views.py
support_site/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/orders/: test_order_manager.py
