[tool.poetry]
name = "tech_support"
version = "1.0.0"
description = "Project for technical service of medical equipment"
authors = ["luchanos <lukash_91@mail.ru>"]

[tool.poetry.dependencies]
python = "3.7"
pytest-asyncio = "0.14.0"
asyncpg = "0.21.0"
yoyo-migrations = "7.2.1"
psycopg2-binary = "2.8.6"
aio-pika = "6.7.1"
poetry = "1.1.4"
Django = "3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
